# pycooldown

./: .gitignore  README.md  build.py  mypy.ini  noxfile.py  pyproject.toml
.github/workflows/: pypi.yml
pycooldown/: __init__.py  __main__.py  cooldown.py  exceptions.py  fixed_mapping.py  flexible_mapping.py  sliding_window.py
tests/: test_fixed_mapping.py  test_import.py  test_sliding_window.py
